<resources>
    <string name="app_name">bluetoothMultiPoint</string>
    <string name="value2">TextView</string>
    <string name="value1">TextView</string>
    <string name="bluetoothtext1">bluetoothtext1</string>
    <string name="connect1btn">Connect</string>
    <string name="bluetoothtext0">bluetoothtext0</string>
    <string name="connect0btn">Connect</string>
    <string name="value0">TextView</string>
    <string name="reconnectRight">Right</string>
    <string name="BroadcastValue">value :</string>
</resources>
